--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -5,10 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/backgroundPosterImageView"
         android:layout_width="match_parent"
@@ -85,6 +81,7 @@
         tools:text="Criminal, Detective, Exciting, So British" />
 
     <androidx.appcompat.widget.AppCompatRatingBar
+        android:id="@+id/movieInfoRatingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -126,6 +123,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewActors"
         android:layout_width="wrap_content"
@@ -139,5 +137,5 @@
         app:layout_constraintTop_toTopOf="@+id/guidelineBottom"
         tools:listitem="@layout/item_actors_recycler_view"/>
 
-    </androidx.core.widget.NestedScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
