--- a/app/src/main/res/layout/fragment_movie_list_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_movie_list_recycler_view.xml
@@ -17,4 +17,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_movie_recycler_view" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
