--- a/app/src/main/res/layout/item_movie_recycler_view.xml
+++ b/app/src/main/res/layout/item_movie_recycler_view.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/cardview_start"
-    android:layout_marginEnd="@dimen/cardview_end"
     android:layout_marginTop="@dimen/card_view_margin_top"
+    android:layout_marginEnd="@dimen/cardview_end"
     android:layout_marginBottom="@dimen/cardview_bottom"
-    app:cardElevation="@dimen/cardview_elevation"
     app:cardCornerRadius="@dimen/cardview_corner_radius"
-    xmlns:tools="http://schemas.android.com/tools">
+    app:cardElevation="@dimen/cardview_elevation">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -20,21 +20,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:src="@drawable/killing_eve_example"
+            android:background="@drawable/shape_background_poster"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/killing_eve_example" />
 
         <TextView
             android:id="@+id/titleMovieTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
             android:textSize="@dimen/text_size_title"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/moviePosterImageView"
-            tools:text ="Killing Eve"/>
+            tools:text="Killing Eve" />
 
         <TextView
             android:id="@+id/dateOfReleaseTextView"
@@ -52,10 +53,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:rating="4.5"
-            app:layout_constraintTop_toBottomOf="@+id/dateOfReleaseTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/dateOfReleaseTextView"
+            tools:rating="4.5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 </androidx.cardview.widget.CardView>
