--- a/app/src/main/res/layout/item_movie_recycler_view.xml
+++ b/app/src/main/res/layout/item_movie_recycler_view.xml
@@ -17,8 +17,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/moviePosterImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="140dp"
+            android:layout_height="200dp"
             android:adjustViewBounds="true"
             android:background="@drawable/shape_background_poster"
             app:layout_constraintEnd_toEndOf="parent"
