--- a/app/src/main/res/layout/fragment_main_movies_rv.xml
+++ b/app/src/main/res/layout/fragment_main_movies_rv.xml
@@ -14,6 +14,8 @@
             android:id="@+id/titleInTheatresCategoryTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_8dp"
             android:text="@string/now_in_theatres"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="8dp"
+            android:layout_margin="@dimen/margin_8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +47,8 @@
             android:id="@+id/mostPopularMovieTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_8dp"
             android:text="@string/most_popular_movies"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +58,7 @@
             android:id="@+id/mostPopularMovieRecyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +71,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/most_popular_series"
-            android:layout_marginTop="16dp"
+            android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mostPopularMovieRecyclerView" />
@@ -77,20 +81,22 @@
             android:id="@+id/mostPopularSeriesRecyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mostPopularSeriesTitleTextView"
-            tools:listitem="@layout/item_actors_recycler_view"/>
+            tools:listitem="@layout/item_actors_recycler_view" />
 
         <TextView
             android:id="@+id/comingSoonTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/coming_soon"
-            android:layout_marginTop="16dp"
+            android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mostPopularSeriesRecyclerView" />
@@ -101,7 +107,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_marginTop="8dp"
+            android:layout_margin="@dimen/margin_8dp"
             app:layout_constraintTop_toBottomOf="@id/comingSoonTextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
