--- a/app/src/main/res/layout/item_search_result_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_result_recycler_view.xml
@@ -2,12 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/cardview_start"
-    android:layout_marginTop="@dimen/card_view_margin_top"
-    android:layout_marginEnd="@dimen/cardview_end"
-    android:layout_marginBottom="@dimen/cardview_bottom"
+    android:layout_margin="@dimen/margin_8dp"
+    app:cardUseCompatPadding="true"
     app:cardCornerRadius="@dimen/cardview_corner_radius"
     app:cardElevation="@dimen/cardview_elevation">
 
@@ -17,8 +15,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/resultPosterImageView"
-        android:layout_width="140dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:background="@drawable/shape_background_poster"
         app:layout_constraintEnd_toEndOf="parent"
