change movie item list and rating view

--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -26,8 +26,9 @@
             android:id="@+id/smallMoviePosterImageView"
             android:layout_width="100dp"
             android:layout_height="150dp"
-            android:layout_marginStart="8dp"
+            android:layout_margin="8dp"
             android:background="@drawable/shape_background_poster"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
             tools:src="@drawable/killing_eve_example" />
@@ -57,7 +58,8 @@
             android:id="@+id/titleInfoTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/card_view_margin_top"
+            android:layout_margin="4dp"
+            android:padding="@dimen/padding_8dp"
             android:textSize="@dimen/text_size_title_info"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +71,8 @@
             android:id="@+id/dateOfReleaseInfoTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/card_view_margin_top"
+            android:layout_margin="4dp"
+            android:padding="@dimen/padding_8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/titleInfoTextView"
@@ -79,7 +82,8 @@
             android:id="@+id/movieGenresTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/card_view_margin_top"
+            android:layout_margin="4dp"
+            android:padding="@dimen/padding_8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/dateOfReleaseInfoTextView"
@@ -89,9 +93,8 @@
             android:id="@+id/movieOverviewTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:paddingStart="@dimen/margin_side_overvie"
-            android:paddingEnd="@dimen/margin_side_overvie"
+            android:padding="@dimen/margin_side_overvie"
+            android:layout_margin="4dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +108,7 @@
             android:id="@+id/youtubeVideoTrailer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_margin="@dimen/margin_8dp"
             app:autoPlay="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -115,10 +118,10 @@
             android:id="@+id/castTitleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/cast_text_margin_start"
-            android:layout_marginTop="16dp"
-            android:text="@string/cast_title"
+            android:layout_margin="8dp"
             android:textSize="@dimen/text_size_title_info"
+            android:padding="@dimen/margin_8dp"
+            android:text="@string/cast_title"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -128,9 +131,7 @@
             android:id="@+id/recyclerViewActors"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="@dimen/cardview_bottom"
-            android:background="@drawable/shape_background_poster"
+            android:layout_margin="8dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
