--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,7 @@
     <dimen name="cardview_start">4dp</dimen>
     <dimen name="cardview_end">4dp</dimen>
     <dimen name="cardview_bottom">4dp</dimen>
-    <dimen name="text_size_title">24sp</dimen>
+    <dimen name="text_size_title">20sp</dimen>
     <dimen name="text_size_date_release">18sp</dimen>
     <dimen name="text_size_title_info">18sp</dimen>
     <dimen name="margint_top_overview">16dp</dimen>
@@ -18,4 +18,5 @@
     <dimen name="margin_overvie">4dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="padding_4dp">4dp</dimen>
 </resources>
