--- a/app/src/main/res/layout/fragment_top250.xml
+++ b/app/src/main/res/layout/fragment_top250.xml
@@ -1,61 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/titleTop250MoviesTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_8dp"
+        android:padding="@dimen/padding_8dp"
         android:text="@string/top_250_movies"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/top250MoviesRecyclerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/titleTop250TvSeriesTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTop250MoviesTextView"
-        tools:listitem="@layout/item_movie_recycler_view"/>
+        tools:listitem="@layout/item_movie_recycler_view" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/titleTop250TvSeriesTextView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_8dp"
+        android:padding="@dimen/padding_8dp"
         android:text="@string/top_250_tv_series"
+        app:layout_constraintBottom_toTopOf="@+id/top250TvSeriesRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineHalf" />
+        app:layout_constraintTop_toBottomOf="@+id/top250MoviesRecyclerView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/top250TvSeriesRecyclerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTop250TvSeriesTextView"
-        tools:listitem="@layout/item_movie_recycler_view"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineHalf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5"/>
-
-
+        tools:listitem="@layout/item_movie_recycler_view" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
