--- a/app/src/main/res/layout/item_movie_recycler_view.xml
+++ b/app/src/main/res/layout/item_movie_recycler_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_marginStart="@dimen/cardview_start"
     android:layout_marginTop="@dimen/card_view_margin_top"
     android:layout_marginEnd="@dimen/cardview_end"
@@ -28,12 +28,13 @@
 
         <TextView
             android:id="@+id/titleMovieTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:minLines="2"
             android:textSize="@dimen/text_size_title"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/moviePosterImageView"
             app:layout_constraintTop_toBottomOf="@+id/moviePosterImageView"
             tools:text="Killing Eve" />
 
@@ -47,13 +48,17 @@
             app:layout_constraintTop_toBottomOf="@+id/titleMovieTextView"
             tools:text="10 April 2019" />
 
-        <RatingBar
-            android:id="@+id/movieRatingBar"
+        <TextView
+            android:id="@+id/movieRatingTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="4dp"
+            android:padding="@dimen/padding_4dp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/white"
+            android:background="@drawable/rounded_shape"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dateOfReleaseTextView"
-            tools:rating="4.5" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="4.5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
