--- a/app/src/main/res/values-ru/dimens.xml
+++ b/app/src/main/res/values-ru/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="padding_4dp">4dp</dimen>
 </resources>
