--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -12,10 +12,9 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/backgroundPosterImageView"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="200dp"
             android:adjustViewBounds="true"
             android:background="@drawable/shape_background_poster"
-            android:scaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@+id/barrierPoster"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,11 +26,26 @@
             android:layout_width="100dp"
             android:layout_height="150dp"
             android:layout_margin="8dp"
-            android:background="@drawable/shape_background_poster"
+            android:scaleType="fitCenter"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
             tools:src="@drawable/killing_eve_example" />
+
+        <TextView
+            android:id="@+id/movieRatingTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@drawable/rounded_shape"
+            android:padding="@dimen/padding_4dp"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/titleInfoTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/titleInfoTextView"
+            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
+            tools:backgroundTint="@color/black"
+            tools:text="4.5" />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/barrierPoster"
@@ -45,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.25" />
+            app:layout_constraintGuide_percent="0.20" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline3"
@@ -57,44 +71,101 @@
         <TextView
             android:id="@+id/titleInfoTextView"
             android:layout_width="0dp"
+            android:minLines="2"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:padding="@dimen/padding_8dp"
             android:textSize="@dimen/text_size_title_info"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/backgroundPosterImageView"
             tools:text="Killing Eve: Second Season" />
+
+        <TextView
+            android:id="@+id/dateOfReleaseInfoLabelTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:text="@string/released_date"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/titleInfoTextView" />
 
         <TextView
             android:id="@+id/dateOfReleaseInfoTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:padding="@dimen/padding_8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/dateOfReleaseInfoLabelTextView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/dateOfReleaseInfoLabelTextView"
+            app:layout_constraintTop_toTopOf="@+id/dateOfReleaseInfoLabelTextView"
+            tools:text="7 April 2019" />
+
+        <TextView
+            android:id="@+id/movieGenresLabelTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:text="@string/genres"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/titleInfoTextView"
-            tools:text="Released: 7 April 2019" />
+            app:layout_constraintTop_toBottomOf="@+id/dateOfReleaseInfoLabelTextView" />
 
         <TextView
             android:id="@+id/movieGenresTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:padding="@dimen/padding_8dp"
+            android:layout_marginTop="5dp"
+            android:minLines="2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/dateOfReleaseInfoTextView"
+            app:layout_constraintStart_toEndOf="@+id/movieGenresLabelTextView"
+            app:layout_constraintTop_toBottomOf="@+id/dateOfReleaseInfoLabelTextView"
             tools:text="Criminal, Detective, Exciting, So British" />
+
+        <TextView
+            android:id="@+id/movieDirectorLabelTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/director"
+            android:layout_margin="4dp"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/movieGenresTextView" />
+
+        <TextView
+            android:id="@+id/movieDirectorTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/movieDirectorLabelTextView"
+            app:layout_constraintTop_toBottomOf="@+id/movieGenresTextView"
+            tools:text="Phoebe Waller Bridge" />
+
+        <TextView
+            android:id="@+id/movieRunTimeLabelTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/runtime"
+            android:layout_margin="4dp"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/movieDirectorTextView" />
+
+        <TextView
+            android:id="@+id/movieRunTimeTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/movieRunTimeLabelTextView"
+            app:layout_constraintTop_toBottomOf="@+id/movieDirectorTextView"
+            tools:text="97 min."/>
+
 
         <TextView
             android:id="@+id/movieOverviewTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="@dimen/margin_side_overvie"
-            android:layout_margin="4dp"
+            android:layout_margin="8dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -106,9 +177,9 @@
 
         <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
             android:id="@+id/youtubeVideoTrailer"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_8dp"
+            android:layout_marginTop="@dimen/margin_8dp"
             app:autoPlay="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +187,7 @@
 
         <TextView
             android:id="@+id/castTitleTextView"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:textSize="@dimen/text_size_title_info"
