--- a/app/src/main/res/layout/item_actors_recycler_view.xml
+++ b/app/src/main/res/layout/item_actors_recycler_view.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/cardview_start"
-    android:layout_marginTop="@dimen/card_view_margin_top"
-    android:layout_marginEnd="@dimen/cardview_end_actor"
+    android:layout_margin="@dimen/cardview_start"
     app:cardUseCompatPadding="true"
     android:elevation="@dimen/cardview_elevation"
     app:cardCornerRadius="@dimen/cardview_corner_radius">
@@ -30,6 +28,7 @@
             android:id="@+id/actorNameTexView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:padding="@dimen/padding_4dp"
             android:minLines="2"
             android:textSize="16sp"
             android:textStyle="bold"
